--- a/styles.css
+++ b/styles.css
@@ -9,36 +9,132 @@
     margin: 0 0 30px 0;
 }
 
+marquee{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif  ;
+}
+
 .players{
     display: flex;
     flex-wrap: wrap;
 }
-.players img{
+.players a{
     min-width: 19%;
-    margin: 5px;
+    margin: 2px;
     
+}
+.players a img{
+    width: 100%;
+}
+.players a img:hover{
+
+    height: 320px;
+    border: #094067 2px solid;
+    border-radius: 10px;
+    background-image: url(/images/hover\ logo.png);
 }
 
 @media screen and (max-width:860px) {
-    .players img{
+    .players a{
         min-width: 30%;
+    }
+    .players a img{
+        width: 100%;
     }
     .header{
         font-size: 25px;
+    }
+    .players img:hover{
+        width: 100%;
+        height: 320px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
+        
+    }
+}
+@media screen and (max-width:814px) {
+    .players a{
+        min-width: 30%;
+    }
+    .players a img{
+        width: 100%;
+    }
+    .header{
+        font-size: 25px;
+    }
+    .players a img:hover{
+        width: 100%;
+        height: 280px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
+        
+    }
+}
+@media screen and (max-width:695px) {
+    .players a{
+        min-width: 30%;
+    }
+    .players a img{
+        width: 100%;
+    }
+    .header{
+        font-size: 25px;
+    }
+    .players a img:hover{
+        width: 100%;
+        height: 250px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
+        
     }
 }
 @media screen and (max-width:650px){
     .header{
         font-size: 20px;
     }
-    .players img{
+    .players a{
         min-width: 45%;
+    }
+    .players a img:hover{
+        width: 100%;
+        height: 320px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
     }
 }
 @media screen and (max-width:540px){
     .header{
         font-size: 15px;
         height: 40px;
+    }
+    .players a{
+        min-width: 45%;
+    }
+    .players a img:hover{
+        width: 100%;
+        height: 280px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
+    }
+}
+@media screen and (max-width:480px){
+    .header{
+        font-size: 15px;
+        height: 40px;
+    }
+    .players a{
+        min-width: 45%;
+    }
+    .players a img:hover{
+        width: 100%;
+        height: 250px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
     }
 }
 @media screen and (max-width:440px){
@@ -49,10 +145,24 @@
     .players{
         justify-content: center;
     }
+    .players a img:hover{
+        width: 100%;
+        height: 22  0px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
+    }
 }
 @media screen and (max-width:270px){
     .header{
         font-size: 6px;
         height: 15px;
+    }
+    .players img{
+        width: 90%;
+        height: 250px;
+        border: #094067 2px solid;
+        border-radius: 10px;
+        background-image: url(/images/hover\ logo.png);
     }
 }
