--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ marquee{
         height: 280px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover ogo.png);
         
     }
 }
