--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ marquee{
     height: 320px;
     border: #094067 2px solid;
     border-radius: 10px;
-    background-image: url(/images/hover\ logo.png);
+    background-image: url(/images/hover logo.png);
 }
 
 @media screen and (max-width:860px) {
@@ -48,7 +48,7 @@ marquee{
         height: 320px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
         
     }
 }
@@ -67,7 +67,7 @@ marquee{
         height: 280px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover ogo.png);
+        background-image: url(/images/hover logo.png);
         
     }
 }
@@ -86,7 +86,7 @@ marquee{
         height: 250px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
         
     }
 }
@@ -102,7 +102,7 @@ marquee{
         height: 320px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
     }
 }
 @media screen and (max-width:540px){
@@ -118,7 +118,7 @@ marquee{
         height: 280px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
     }
 }
 @media screen and (max-width:480px){
@@ -134,7 +134,7 @@ marquee{
         height: 250px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
     }
 }
 @media screen and (max-width:440px){
@@ -150,7 +150,7 @@ marquee{
         height: 22  0px;
         border: #094067 2px solid;
         border-radius: 10px;
-        background-image: url(/images/hover\ logo.png);
+        background-image: url(/images/hover logo.png);
     }
 }
 @media screen and (max-width:270px){
